antonioaguilar.me/tony-deployment.yaml
apiVersion: apps/v1 
kind: DaemonSet
metadata:
  name: tony
spec:
  selector:
    matchLabels:
      app: tony
  template:
    metadata:
      labels:
        app: tony
    spec:
      containers:
      - name: node
        image: beltranalex928/tony:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
